# divoom_ditoo_tui_linux

./: .gitignore  README.md  pyproject.toml
docs/: protocol.md
src/ditoo/: __init__.py  __main__.py  config.py  logging_setup.py
src/ditoo/bluetooth/: __init__.py  connection.py  protocol.py
src/ditoo/features/: __init__.py  battery.py  brightness.py  clock.py  icons.py  weather.py
src/ditoo/ui/: __init__.py  app.py  channel_screen.py  clock_face_screen.py  controls_screen.py  icon_search_screen.py  menu.py  status_bar.py  sync_screen.py
