[project]
name = "ditoo"
version = "0.1.0"
description = "Terminal controller for Divoom Ditoo-Plus pixel art speaker"
authors = [
    {name = "Alex B", email = "ab@alexertech.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=11.0.0",
]

[project.scripts]
ditoo = "ditoo.__main__:main"

[tool.poetry]
packages = [{include = "ditoo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
